2022-07-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tbl]: Regression-test Savannah #49390.

	* src/preproc/tbl/tests/\
	do-not-overlap-bottom-border-in-nroff.sh: Do it.
	* src/preproc/tbl/tbl.am (tbl_TESTS): Run test.

2022-07-28  Deri James  <deri@chuzzlewit.myzen.co.uk>

	[gropdf]: slanting lowercase greek characters. See
	https://lists.gnu.org/archive/html/groff/2022-07/msg00210.html

	* tmac/pdf.tmac: to prevent gropdf from slanting all lowercase
	greek characters only slant if the glyp is sourced from a
	special font, not if the regular font contains greek glyphs.

2022-07-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac: Add italic correction support to `I` and `BI`
	macros.  Call `par*define-font-macro` with newly recognized
	third argument indicating that italic corrections should be
	applied.
	(par*define-font-macro): Apply the corrections if directed.

2022-07-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (input_char_description): Clear
	static buffer on every entry to the function so that calling it
	twice in succession where the second call populates the buffer
	with less data doesn't return leftover garbage characters.
	Problem appears to date back to 1991 or earlier.

	Fixes <https://savannah.gnu.org/bugs/?62813>.

2022-07-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::usable_as_delimiter):
	(do_non_interpreted, interpolate_arg): Recast diagnostic
	messages for clarity.

2022-07-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/e.tmac: Initialize section number registers. Fixes
	warnings when starting section numbering at a depth greater than
	1.

	Fixes <https://savannah.gnu.org/bugs/?62812>.

2022-07-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PAGE): Use 'grep -q' instead of redirecting
	standard output to null device.  The '-q' option was